# product-fetcher

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py
agents/: json_conformer.py
schema/: models.py
utils/: search.py
