[project]
name = "product-fetcher"
version = "0.1.0"
description = "Fetches products you want and returns structured data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.116.0",
    "litellm>=1.74.0.post1",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
